
2017-09-18  Ron Norman <rjn@inglenet.com>

	* codegen.c: 
	  Clear cob_glob_ptr->cob_exception_code at start of CALL

2017-09-18  Ron Norman <rjn@inglenet.com>

	* config.def: 
	  Added select-working: yes/no
	  SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
	* typeck.c: 
	  Report 'declared outside WORKING-STORAGE' if 'select-working: yes'
	  and SELECT RELATIVE KEY or ASSIGN field is not in WORKING-STORAGE
	* codegen.c: 
	  When SELECT RELATIVE KEY or ASSIGN field is not in WORKING-STORAGE
	  Then set current data address in each OPEN and for RELATIVE files 
	  on every I/O operation
	* tree.c: 
	  Fix compile time resolve of FUNCTION INTEGER with negative value

2017-09-15  Ron Norman <rjn@inglenet.com>

	* flag.def,tree.c: 
	  Added -finline-intrinsic, defaults to ON
	  In tree.c . cb_build_intrinsic . if arguments as constants
	  then for some functions the value is computed at compile
	  time. Some functions are not done due to difference in
	  precision expected by some test cases.
	  More could be done with this later...

2017-08-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: work on expression warning messages and added more

2017-08-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* flag.def: always activate cb_flag_recursive_check by CB_FLAG_ON
	* tree.c, codegen.c: assume RECURSIVE for -fno-recursive-check

2017-08-18  Ron Norman <rjn@inglenet.com>

	* codegen.c: 
	  Call cob_module_global_entry with COBOL routine signature
	  So it can verify if being called from C or COBOL
	  Emit code for CALL to handle ON EXCEPTION

2017-08-17  Ron Norman <rjn@inglenet.com>

	* scanner.l: Added SET_LOCATION when returning 'literal' 
	             which is a 78/01 constant

2017-08-17  Ron Norman <rjn@inglenet.com>

	* codegen.c: 
	  Emit cob_module_global_entry instead of cob_module_enter and
	  pass the 'entry' value.

2017-08-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
